2006-10-08 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/x_window.c: Commited patch by Patrick to greatly reduce the
	flickering/unnecessary redrawing when opening up schematic pages.
	Thanks.

2006-10-04  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* src/x_compselect.c, include/x_compselect.h: Added a button to 
	clear the filter entry of the component selection dialog.
	Modified to auto-update the component selection as user types in
	filter entry.

	* include/prototype.h, src/x_dialog.c: Deleted old exit_dialog.
	Added new dialog for user confirmation before closing a page or a
	window.

	* src/i_callbacks.c, src/x_fileselect.c: Adapted code to use new
	functions of x_window.c.

	* src/x_window.c: Added new functions to open, close, save and
	change page.

	* src/x_event.c (x_event_configure): Cleaned up.
	Fixed Bug#1527465: fit page zooms when window is maximized.

2006-10-03 Carlos Nieves Onega <cnieves@iespana.es>

	* lib/system-gschemrc.in, src/g_register.c: 
	Changed the name of the new scheme function which adds a component
	at a given location to add-component-at-xy. The former name
	was already used.

2006-09-30 Carlos Nieves Onega <cnieves@iespana.es>

	* lib/system-gschemrc.in: Changed the definition of the default
	titleblock. Users can now easily override the default setting.

	* src/x_event.c, src/x_window.c, include/prototype.h:
	Fix for bug #1527465. Do a zoom extents for all pages when the
	main window is maximized.

	* src/x_image.c: Added the border in the gdk-pixbuf's image output.
	Fix bug #1565433.
	
2006-09-30 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/g_hook.c: Added code to g_add_component so that the 
	component is added to the object list properly.

	* src/g_hook.c: Commented out o_redraw_single call to minimize
	flickering.  At some point a g_redraw_all should be added for
	those users who want to use g_component_add from a script.

	* i_callbacks.c: Removed unnecessary redraw and scrollbar calls 