@@ -1,3 +1,7 @@
+2006-10-13  Patrick Bernaud  <b-patrick@wanadoo.fr>
+
+	* src/x_compselect.c: Modified to close when Escape is pressed.
+
 2006-10-08 Ales Hvezda   <ahvezda@geda.seul.org>
 
 	* src/x_window.c: Commited patch by Patrick to greatly reduce the
